--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
       <div class="container">
         <div class="logo"><a href="index.html">MNTN</a></div>
         <nav>
-          <label for="toggle"><img src="assets/icons/menu.webp" alt="Menu Icon" /></label>
+          <label for="toggle">
+            <svg width="64px" height="64px" viewBox="0 -0.5 25 25" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff">
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M6.5 11.75C6.08579 11.75 5.75 12.0858 5.75 12.5C5.75 12.9142 6.08579 13.25 6.5 13.25V11.75ZM18.5 13.25C18.9142 13.25 19.25 12.9142 19.25 12.5C19.25 12.0858 18.9142 11.75 18.5 11.75V13.25ZM6.5 15.75C6.08579 15.75 5.75 16.0858 5.75 16.5C5.75 16.9142 6.08579 17.25 6.5 17.25V15.75ZM18.5 17.25C18.9142 17.25 19.25 16.9142 19.25 16.5C19.25 16.0858 18.9142 15.75 18.5 15.75V17.25ZM6.5 7.75C6.08579 7.75 5.75 8.08579 5.75 8.5C5.75 8.91421 6.08579 9.25 6.5 9.25V7.75ZM18.5 9.25C18.9142 9.25 19.25 8.91421 19.25 8.5C19.25 8.08579 18.9142 7.75 18.5 7.75V9.25ZM6.5 13.25H18.5V11.75H6.5V13.25ZM6.5 17.25H18.5V15.75H6.5V17.25ZM6.5 9.25H18.5V7.75H6.5V9.25Z"
+                  fill="#ffffff"
+                ></path>
+              </g>
+            </svg>
+          </label>
           <input type="checkbox" id="toggle" />
           <ul>
             <li><a href="#">Equipment</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="#article">Blog</a></li>
           </ul>
         </nav>
       </div>
@@ -30,11 +41,11 @@
               Be Prepared For The <br />
               Mohamed And Beyond!
             </h1>
-            <a href="#">scroll down <img src="assets/icons/arrow_down.webp" alt="" /></a>
+            <a href="#article">scroll down <img src="assets/icons/arrow_down.webp" alt="" /></a>
           </div>
         </div>
       </section>
-      <section class="article article-1">
+      <section class="article article-1" id="article">
         <div class="container">
           <article>
             <span class="subtitle">Get Started</span>
